[gd_scene load_steps=3 format=3 uid="uid://dy7mamrbbl62h"]

[ext_resource type="Script" uid="uid://ckwigofdvtwjr" path="res://scripts/UI/menu_button.gd" id="1_h06yv"]
[ext_resource type="Texture2D" uid="uid://bggp8dpb3md4y" path="res://assets/ui/MenuButton.png" id="2_h06yv"]

[node name="MenuButton" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_h06yv")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
icon = ExtResource("2_h06yv")
flat = true
icon_alignment = 1

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_pressed"]
